--- a/paper3_demos/style.css
+++ b/paper3_demos/style.css
@@ -40,7 +40,7 @@ h1{
 h2{
     font-size: 26px;
     line-height: 42px;
-    font-weight: 520;
+    font-weight: 500;
     background: #fcfcfc;
 }
 h3{
@@ -50,10 +50,9 @@ h3{
     background: #fcfcfc;
 }
 h4{
-    text-align: center;
     font-size: 16px;
     line-height: 38px;
-    background: #eee;
+    background: #fcfcfc;
     margin-bottom: 10px;
 }
 .someAudio,.imageDiv{
