--- a/paper3_demos/style.css
+++ b/paper3_demos/style.css
@@ -39,21 +39,29 @@ b{
     height: auto;
 }
 h1{
-    font-size: 26px;
+    font-size: 33px;
     line-height:1.2;
+    font-weight: 800;
 }
 h2{
-    font-size: 26px;
-    line-height: 42px;
+    font-size: 30px;
+    line-height:1.4;
 }
 h3{
-    font-size: 20px;
-    line-height: 38px;
+    font-size: 28px;
+    line-height:1.4;
 }
 h4{
-    font-size: 16px;
-    line-height: 38px;
+    font-size: 24px;
+    line-height:1.4;
     margin-bottom: 10px;
+    font-weight: 700;
+}
+h5{
+    font-size: 20px;
+    line-height: 1.3;
+    margin-bottom: 10px;
+    font-weight: 600;
 }
 .someAudio,.imageDiv{
     width: 100%;
@@ -110,4 +118,28 @@ table audio{
     transform: rotate(35deg);
     color: #111;
     transform-origin:center center;
+}
+#toc_container {
+    background: #f9f9f9 none repeat scroll 0 0;
+    border: 1px solid #aaa;
+    display: table;
+    font-size: 95%;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 8px;
+    width: auto;
+}
+#toc_container ul ,#toc_container ul li a{
+    color: #2067af;
+    line-height: 28px;
+}
+#toc_container ul p{
+    padding-left: 2px;
+}
+#toc_container ul ol{
+    padding-left: 14px;
+}
+#toc_container ul ol a{
+    color: #2067af;
 }
